--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,7 +9,7 @@
     <div id="navigation" class="col-full">
 
         <ul id="main-nav" class="nav fl">
-            <li class="{% if page.title == 'Subway Maps' %}page_item current_page_item{% else %}page_item page-item-2{% endif %}"><a href="/index.html" title="Home">Home</a></li>
+            <li class="{% if page.title == 'Subway Maps API - Home' %}page_item current_page_item{% else %}page_item page-item-2{% endif %}"><a href="/index.html" title="Home">Home</a></li>
             <li class="{% if page.title == 'Subway Map API' %}page_item current_page_item{% else %}page_item page-item-2{% endif %}"><a href="/api.html" title="API">API</a></li>
             <li class="{% if page.title == 'Subway Map - API Lifecycle' %}page_item current_page_item{% else %}page_item page-item-2{% endif %}"><a href="/lifecycle.html" title="Lifecycle" target="_blank">Lifecycle</a></li>
             <li class="{% if page.title == 'Subway Map - Example 1' %}page_item current_page_item{% else %}page_item page-item-2{% endif %}"><a href="/example-1.html" title="Example 1" target="_blank">Example 1</a></li>
