--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,7 @@
 <div id="wrapper">
     
      <div id="header" class="col-full">
-        <div id="logo"><a href="http://apievangelist.com" title=""><img src="http://kinlane-productions.s3.amazonaws.com/api-evangelist/api-evangelist-logo-400.png"></a></div> 
+        <div id="logo"><a href="http://apievangelist.com" title=""><img src="https://s3.amazonaws.com/kinlane-productions/api-evangelist/api-evangelist-subway-map.png" width="400"></a></div> 
         
     </div>
     
