--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -83,8 +83,8 @@
     <div class="content container">
 
       <p align="center">
-      	<a href="http://dns.apievangelist.com">
-      		<img src="https://s3.amazonaws.com/kinlane-productions/api-evangelist/api-evangelist-logo-privacy.png" align="center" width="90%" style="padding-bottom: 10px;" />
+      	<a href="http://subway.map.apievangelist.com/">
+      		<img src="https://s3.amazonaws.com/kinlane-productions/api-evangelist/api-evangelist-logo-subway-maps.png" align="center" width="90%" style="padding-bottom: 10px;" />
       	</a>
       </p>
 
