--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,7 +16,7 @@
   		var $oauthio = '{{ site.oauthio }}';
 
       </script>
-      
+
       <div class="masthead-inner" align="center">
 
       <h2><a href="http://apievangelist.com">{"Subway Map API"}</a></h2>
@@ -91,7 +91,7 @@
       </div>
     </header>
 
-    <div class="content container">
+    <div class="content uicontainer">
 
       <p align="center">
       	<a href="http://subway.map.apievangelist.com/">
