--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -48,6 +48,9 @@
             <li>
               <a href="/example-2.html">Example 2</a>
             </li>
+            <li>
+              <a href="/api-lifecycle.html">API Lifecycle (Beta)</a>
+            </li>
             <li style="padding-top: 10px;">
               <a href="http://apis.how/eqpljzhrmt" style="font-size: 14px;" target="_blank"><span style="color: #FD7A23;">Are You Coming</span> to @APIStrat Austin?</a>
             </li>
